# case-chat

./: .dockerignore  .env.box.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
case_chat/: __init__.py  config.py
case_chat/casedata/: dataset.py  queries.py
case_chat/chat/: mcp_client.py  orchestrator.py  vllm_client.py
case_chat/embeddings/: __init__.py  client.py
case_chat/knowledgedb/: reembed.py
case_chat/mcp_server/: server.py  tools.py
case_chat/retrieval/: corpus.py
case_chat/synthetic/: indexer.py  loaders.py
case_chat/web/: app.py  auth.py  conversations.py  documents.py  passages.py
case_chat/web/static/: index.html
deploy/: .env.example  README.md  build_indexes.sh  docker-compose.5090.yml  docker-compose.vps.yml  docker-compose.yml  try_vllm.sh  web_entrypoint.sh
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  bootstrap.sh.tftpl  outputs.tf  provider.tf  runpod.tf  terraform.tfvars.example  variables.tf  vultr-vps.tf
docs/: DESIGN.md  RUNBOOK.md
docs/decisions/: 0001-vector-store-qdrant.md  0002-collection-taxonomy.md  0003-fake-case-dataset-sqlite.md  0004-no-athena-embedding-seam.md  0005-web-auth-boundary.md  0006-local-dev-model-ollama-gemma4.md
scripts/: restore_knowledgedb.sh
tests/: test_auth.py  test_casedata.py  test_conversations.py  test_documents.py  test_embeddings_client.py  test_mcp_tools.py  test_orchestrator.py  test_passages.py  test_retrieval_partition.py
